--- a/learn-certs-pr/courses/az-030t00.yml
+++ b/learn-certs-pr/courses/az-030t00.yml
@@ -24,14 +24,14 @@ roles:
 - solution-architect
 products:
 - azure
-exams:
-- uid: exam.az-303
 summary: |-
   Этот курс учит Solutions Architects, которые ранее проектировали для веб-служб Amazon, как преобразовывать бизнес-требования в безопасные, масштабируемые и надежные решения для Azure. Включены уроки по виртуализации, автоматизации, сетевому взаимодействию, хранению, идентификации, безопасности, платформе данных и инфраструктуре приложений. Этот курс описывает, как различные решения в каждой области влияют на общее решение.
 
   #### Профиль аудитории
   Этот курс предназначен для AWS Cloud Architects, имеющих опыт разработки и внедрения решений, работающих на AWS, которые теперь хотят разрабатывать для Microsoft Azure.
 prerequisitesSection: |-
+  Для успешного прохождения этого курса у учащихся должно быть следующее&#58;
+  
   - Опыт работы (>1 года) в качестве архитектора AWS, разрабатывающего безопасные и масштабируемые облачные решения AWS для всех структур хранения, вычислительных систем, сетей и для взаимодействия с внешними ресурсами/службами.
   - Понимание локальных технологий виртуализации, включая&#58; виртуальные машины, виртуальные сети и виртуальные жесткие диски.
   - Понимание конфигурации сети, включая TCP/IP, систему доменных имен (DNS), виртуальные частные сети (VPN), брандмауэры и технологии шифрования.
