--- a/learn-certs-pr/courses/az-220t00.yml
+++ b/learn-certs-pr/courses/az-220t00.yml
@@ -18,7 +18,8 @@ skillsGained:
 - skill: Реализовывать управление устройствами с использованием двойников устройств и прямых методов.
 - skill: Реализовывать мониторинг решений, ведение журналов и диагностическое тестирование.
 - skill: Распознавать и устранять угрозы безопасности и применять Центр безопасности Azure для Интернета вещей.
-- skill: Строить решения Интернета вещей с использованием Azure IoT Central и распознавать возможности SaaS для Интернета вещей.
+- skill: Построить решение Azure Digital Twins для интеграции вышестоящей и нижестоящей службы.
+- skill: Построить решение IoT с использованием Azure IoT Central и распознать возможности SaaS для IoT.
 learningPartnersLink: /learn/certifications/partners
 locales:
 - en
@@ -28,15 +29,22 @@ roles:
 - developer
 products:
 - azure
-- azure-iot
 exams:
 - uid: exam.az-220
 summary: |-
-  Этот курс даст учащимся знания и навыки, необходимые для успешного создания и поддержания облачных и пограничных частей решений Интернета вещей Azure. Этот курс включает полный разбор основных служб Интернета вещей Azure, таких как Центр Интернета вещей, службы подготовки устройств, Azure Stream Analytics, Аналитика временных рядов и других. В дополнение к фокусировке на службах Azure PaaS курс также включает разделы, посвященные IoT Edge, управлению устройствами, мониторингу и управлению неполадок, угрозам безопасности и Azure IoT Central.
+  Этот курс даст учащимся знания и навыки, необходимые для успешного создания и поддержания облачных и пограничных частей решений Интернета вещей Azure. Этот курс включает полный разбор основных служб Интернета вещей Azure, таких как Центр Интернета вещей, службы подготовки устройств, Azure Stream Analytics, Аналитика временных рядов и других. В дополнение к фокусировке на службах Azure PaaS курс также включает разделы, посвященные IoT Edge, управлению устройствами, мониторингу и устранению неполадок, угрозам безопасности, Azure Digital Twins и Azure IoT Central.
 
   #### Профиль аудитории
-  Разработчик Интернета вещей Azure отвечает за реализацию и поддержку облачных и пограничных частей решений Интернета вещей Azure. Помимо настройки и обслуживания устройств с использованием служб Интернета вещей Azure и других инструментов Microsoft, разработчик Интернета вещей настраивает физические устройства и отвечает за обслуживание устройств на протяжении их жизненного цикла. Разработчик Интернета вещей занимается осуществлением разработки для решений Интернета вещей, включая вопросы топологии устройств, подключения, отладки и безопасности. Для сценариев пограничных устройств разработчик Интернета вещей также осуществляет развертывание вычислительной среды / контейнеров и конфигурацию сети устройств, что может включать применение различных пограничных шлюзов. Разработчик Интернета вещей занимается осуществлением разработки для решений для управления конвейерами данных, включая мониторинг и преобразование данных, имеющих отношение к Интернету вещей. Разработчик Интернета вещей работает с инженерами данных и иными заинтересованными лицами с целью обеспечения успешной интеграции бизнеса. Разработчики Интернета вещей должны обладать хорошим пониманием служб Azure, включая возможности хранения данных, анализ данных, обработку данных, отличие возможностей Azure IoT PaaS от SaaS. Разработчики Интернета вещей должны обладать базовыми навыками программирования по крайней мере на одном из поддерживаемых Azure языков, среди которых C#, Node.js, C, Python и Java.
-prerequisitesSection: "- Понимание облачных решений&#58; у учащихся должен быть опыт использования портала Azure и базовое понимание реализации PaaS, SaaS и IaaS.\n- Опыт разработки программного обеспечения&#58; наличие опыта разработки программного обеспечения является обязательным требованием для прохождения этого курса, однако знание какого-то определенного языка программирования не требуется и опыт не обязательно должен быть профессиональным. \n- Опыт обработки данных&#58; общее понимание хранения и обработки данных рекомендуется, но не является обязательным. \n\nЕсли вы только начинаете знакомиться с Azure и облачными вычислениями, рекомендуем ознакомиться с одним из следующих ресурсов&#58;\n- бесплатный онлайн-ресурс&#58; «Основы Azure» (https&#58;//docs.microsoft.com/en-us/learn/paths/azure-fundamentals/);\n- курс под руководством инструктора&#58; AZ-900&#58; «Основы Azure» (https&#58;//docs.microsoft.com/en-us/learn/certifications/courses/az-900t01). "
+
+  Разработчик Azure IoT отвечает за реализацию и кодирование, необходимые для создания и поддержки части cloud и части edge решения IoT. Помимо настройки и обслуживания устройств с использованием служб Интернета вещей Azure и других инструментов Microsoft, разработчик Интернета вещей настраивает физические устройства и отвечает за обслуживание устройств на протяжении их жизненного цикла. Разработчик Интернета вещей занимается осуществлением разработки для решений Интернета вещей, включая вопросы топологии устройств, подключения, отладки и безопасности. Для сценариев пограничных устройств разработчик Интернета вещей также осуществляет развертывание вычислительной среды / контейнеров и конфигурацию сети устройств, что может включать применение различных пограничных шлюзов. Разработчик Интернета вещей занимается осуществлением разработки для решений для управления конвейерами данных, включая мониторинг и преобразование данных, имеющих отношение к Интернету вещей. Разработчик Интернета вещей работает с инженерами данных и иными заинтересованными лицами с целью обеспечения успешной интеграции бизнеса. Разработчики Интернета вещей должны обладать хорошим пониманием служб Azure, включая возможности хранения данных, анализ данных, обработку данных, отличие возможностей Azure IoT PaaS от SaaS. Разработчики Интернета вещей должны обладать базовыми навыками программирования по крайней мере на одном из поддерживаемых Azure языков, среди которых C#, Node.js, C, Python и Java.
+prerequisitesSection: |-
+  Для успешного прохождения этого курса у учащихся должно быть следующее&#58;
+
+  - Понимание облачных решений&#58; у учащихся должен быть опыт использования портала Azure и базовое понимание реализации PaaS, SaaS и IaaS.
+  - Опыт разработки программного обеспечения&#58; наличие опыта разработки программного обеспечения является обязательным требованием для прохождения этого курса, однако знание какого-то определенного языка программирования не требуется и опыт не обязательно должен быть профессиональным. 
+  - Опыт обработки данных&#58; общее понимание хранения и обработки данных рекомендуется, но не является обязательным. 
+  - бесплатный онлайн-ресурс&#58; «Основы Azure» (https&#58;//docs.microsoft.com/en-us/learn/paths/azure-fundamentals/);
+  - курс под руководством инструктора&#58; AZ-900&#58; «Основы Azure» (https&#58;//docs.microsoft.com/en-us/learn/certifications/courses/az-900t01). 
 outlineSection: |-
   ### Модуль 1&#58; знакомство с Интернетом вещей и службами Интернета вещей Azure
   В этом модуле учащиеся начнут работу с изучения рекомендаций для бизнеса для различных реализаций Интернета вещей и знакомства с тем, как эталонная архитектура Интернета вещей Azure поддерживает решения Интернета вещей. В этом модуле учащимся будет представлен обзор служб Azure, обычно используемых в решениях Интернета вещей, и обзор портала Azure.
@@ -225,7 +233,33 @@ outlineSection: |-
   - Настраивать агенты безопасности и двойников модулей безопасности
   - Агрегировать Центр безопасности Azure для событий Интернета вещей
 
-  ### Модуль 11&#58; создание решения Интернета вещей с IoT Central
+  ### Модуль 11&#58; ADT
+
+  В этом модуле учащиеся изучат понятия решения Azure Digital Twins и выполнят первые шаги по реализации ADT. Студенты начнут с изучения понятий службы Azure Digital Twins и решения ADT, а затем познакомятся со средствами разработки, которые можно использовать для построения и мониторинга решения ADT. После этого учащиеся воспользуются средствами разработки для создания пользовательских моделей, построения и запроса графа среды ADT, принятия телеметрии устройства IoT и реализации бизнес-логики и обработки данных.
+
+  #### Уроки
+
+  *   Знакомство с Azure Digital Twins
+
+  *   Знакомство с разработкой решения ADT
+
+  *   Мониторинг и устранение неполадок ADT
+
+  #### Лабораторная работа&#58; разработка решений Azure Digital Twins (ADT)
+
+  После прохождения этого модуля учащиеся смогут&#58;
+
+  *   Описывать компоненты решения Azure Digital Twins (ADT)
+
+  *   Объяснять, как создать и настроить экземпляр ADT
+
+  *   Объяснять, как создавать и запрашивать граф ADT и как им управлять
+
+  *   Объяснять, как принимать данные ADT из центра IoT и как реализовывать поддержку для нижестоящих служб
+
+  *   Описывать, как осуществлять мониторинг и устранение неполадок ADT
+
+  ### Модуль 12&#58; создание решения Интернета вещей с IoT Central
   В этом модуле учащиеся узнают, как настроить и внедрить Azure IoT Central в качестве SaaS-решения для Интернета вещей. Учащиеся начнут с общего изучения IoT Central и принципа работы этой платформы. После получения общего понимания IoT Central учащиеся перейдут к созданию шаблонов устройств и управлению ими, а затем — к управлению устройствами в их приложении IoT Central.
 
   #### Уроки
@@ -234,9 +268,9 @@ outlineSection: |-
   - Управление устройствами в Azure IoT Central
 
 
-  #### Лабораторная&#58; начало работы с Azure IoT Central
+  #### Лабораторная работа&#58; создание решения IoT с IoT Central
 
-  #### Лабораторная&#58; реализация решений Интернета вещей с Azure IoT Central
+  #### 
 
   После прохождения этого модуля учащиеся смогут&#58;
   - Описывать разницу между Azure IoT Central и службами Azure IoT PaaS
