--- a/learn-certs-pr/courses/mb-220t00.yml
+++ b/learn-certs-pr/courses/mb-220t00.yml
@@ -25,7 +25,6 @@ roles:
 - functional-consultant
 products:
 - dynamics
-- dynamics-marketing
 exams:
 - uid: exam.mb-220
 summary: |-
@@ -34,18 +33,17 @@ summary: |-
   #### Профиль аудитории
   Этот курс разработан для специалистов в области IT и маркетинга, желающих узнать, как использовать Dynamics 365 Marketing для бизнеса.
 prerequisitesSection: |-
-  Знание платформы Dynamics 365 и понимание основных принципов маркетинга.
+  Знание платформы Dynamics 365 и понимание базовых принципов маркетинга. Также желателен опыт работы с Power Platform, особенно с приложениями на основе модели.
 outlineSection: |-
   ### Модуль 1&#58; настройка Dynamics 365 Marketing
-  В этом модуле вы узнаете о дополнительных параметрах, маркетинговом контенте, шаблонах и интеграциях в Dynamics 365 for Marketing.
+  В этом модуле вы узнаете о настройке своего экземпляра Marketing и настройке расширенных параметров.
   #### Уроки
-  - Настройка параметров организации и управления.
+  - Настройка Dynamics 365 Marketing и управление им
   - Настройка маркетинговых параметров.
-  - Настройка параметров событий.
 
   После прохождения этого модуля вы сможете&#58;
+  - Настройка вашего приложения Marketing.
   - Настраивать дополнительные параметры, такие как организация, управление бизнесом и контент.
-  - Управлять маркетинговым контентом и шаблонами.
 
 
   ### Модуль 2&#58; управление сегментами и списками
@@ -100,13 +98,13 @@ outlineSection: |-
   ### Модуль 6&#58; управление событиями
   В этом модуле рассматривается процесс создания цикла взаимодействия с клиентами.
   #### Уроки
-  - Создание события на сайте.
+  - Создание события
   - Создание вебинара.
   - Продвижение событий и управление ими.
 
   После прохождения этого модуля вы сможете&#58;
-  - Создавать вебинары.
-  - Создавать события на сайте.
+  - Создание события
+  - Создание вебинара с использованием Teams в качестве поставщика вебинара.
   - Продвигать событие.
   - Управлять сайтом события.
   - Настраивать параметры событий.
