--- a/learn-certs-pr/courses/mb-910t00.yml
+++ b/learn-certs-pr/courses/mb-910t00.yml
@@ -22,6 +22,8 @@ roles:
 - business-owner
 products:
 - dynamics-365
+exams:
+- uid: exam.mb-910
 summary: |-
   Этот курс даст вам общее представление о возможностях Dynamics 365 для взаимодействия с клиентами. Вы познакомитесь с понятием взаимодействия с клиентами и со всеми приложениями для взаимодействия с клиентами, включая Dynamics 365 Marketing, Dynamics 365 Sales, Dynamics 365 Customer Service, Dynamics 365 Field Service, а также с возможностями управления отношениями с клиентами (CRM), предоставляемыми проектными операциями Dynamics 365. Этот курс будет включать лекцию и практические лабораторные работы.
 
