--- a/learn-certs-pr/exams/az-204.yml
+++ b/learn-certs-pr/exams/az-204.yml
@@ -15,7 +15,9 @@ summary: |-
   У кандидата на эту сертификацию должен быть профессиональный опыт разработки (1–2 года) и опыт работы с Microsoft Azure. Более того, кандидат на эту роль должен уметь программировать на языке, поддерживаемом Azure, и обладать опытом работы с Azure SDK, Azure PowerShell, Azure CLI, вариантами хранения данных, подключениями к данным, API, проверкой подлинности и авторизацией приложений, развертыванием вычислений и контейнеров, отладками, настройкой производительности и мониторингом.
   
   У вас может быть право на получение кредитов колледжа от ACE после сдачи этого сертификационного экзамена. Перейдите на страницу [«Кредиты колледжа от ACE за сертификационные экзамены»](/learn/certifications/ace-credit-for-certification-exams), чтобы узнать больше.
-subTitle: 'Этот экзамен предполагает проверку ваших способностей выполнять следующие технические задачи: разработка Azure вычислительных служб; разработка для службы хранилища Azure; внедрение безопасности Azure; мониторинг, устранение неполадок и оптимизация решений; а также подключение и использование служб Azure и сторонних служб.'
+subTitle: 'Этот экзамен предполагает проверку ваших способностей выполнять следующие технические задачи: разработка Azure вычислительных служб; разработка для службы хранилища Azure; внедрение безопасности Azure; мониторинг, устранение неполадок и оптимизация решений; а также подключение и использование служб Azure и сторонних служб.
+
+Проходящие тестирование лица смогут выбрать язык кода (C# или Python), который будет включен в вопросы, во время запуска экзамена, если они сдают экзамен с Pearson VUE. Однако такая возможность не предоставляется для экзаменов, сдаваемых с помощью PSI. Такие вопросы будут включать код на языке C#.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4oZ7B
 locales:
