--- a/learn-certs-pr/exams/ms-100.yml
+++ b/learn-certs-pr/exams/ms-100.yml
@@ -6,7 +6,7 @@ metadata:
 uid: exam.ms-100
 displayName: MS-100
 summary: |-
-  <div><font color='red'><strong>Содержание этого экзамена будет обновлено 2 июня 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Содержание этого экзамена было обновлено 2 июня 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong></font><br/><br/></div>
   
   Кандидатами на этот экзамен являются сертифицированные администраторы Microsoft 365 Enterprise, которые участвуют в оценке, планировании, переносе, развертывании и управлении службами Microsoft 365. Они выполняют задачи по управлению арендой в Microsoft 365 для организаций, в том числе управление идентификациями, безопасностью, соответствием стандартам и поддержкой технологий.
   
@@ -22,7 +22,7 @@ locales:
 levels:
 - advanced
 skills:
-- Содержание этого экзамена будет обновлено 2 июня 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
+- Содержание этого экзамена было обновлено 2 июня 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
 - Разработка и внедрение служб Microsoft 365 (25-30%)
 - Управление идентификацией и ролями пользователей (25-30%)
 - Управление доступом и аутентификацией (15-20%)
