--- a/learn-certs-pr/courses/pl-600t00.yml
+++ b/learn-certs-pr/courses/pl-600t00.yml
@@ -7,7 +7,7 @@ uid: course.pl-600t00
 courseNumber: 'PL-600T00'
 hoursToComplete: 96
 iconUrl: /media/learn/certification/course.svg
-learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
+learningPartnersLink: /learn/certifications/partners
 locales:
 - en
 levels:
@@ -16,6 +16,8 @@ roles:
 - solution-architect
 products:
 - power-platform
+exams:
+- uid: exam.pl-600
 summary: |-
   Архитектор решений отвечает за успешную разработку, внедрение и развертывание общего решения, а также успешный переход на такое решение. Архитектор решений обеспечивает соответствие решения потребностям клиента в настоящее время и в будущем. В этом курсе учащиеся познакомятся с решениями, которые принимает архитектор решений во время реализации решений, включая такие аспекты, как безопасность, интеграции, архитектуру Power Apps, архитектуру Power Automate и другие. Этот курс разработан для того, чтобы познакомить вас с ролью архитектора решений.
 
