--- a/learn-certs-pr/exams/dp-100.yml
+++ b/learn-certs-pr/exams/dp-100.yml
@@ -6,12 +6,14 @@ metadata:
 uid: exam.dp-100
 displayName: DP-100
 summary: |-
-  <div><font color='red'><strong>Содержание этого экзамена будет обновлено 20 мая 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Содержание этого экзамена было обновлено 20 мая 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong></font><br/><br/></div>
   
-  Azure Data Scientist применяет свои знания в области data science и машинного обучения для внедрения и выполнения рабочих нагрузок машинного обучения в Azure; в частности, с помощью службы машинного обучения Azure. Это включает планирование и создание подходящей рабочей среды для специалистов в области data science в Azure, проведение экспериментов с данными и обучение прогнозным моделям, управление моделями и их оптимизацию, а также внедрение моделей машинного обучения в производство.
-  
-  У вас может быть право на получение кредитов колледжа от ACE после сдачи этого сертификационного экзамена. Перейдите на страницу [«Кредиты колледжа от ACE за сертификационные экзамены»](/learn/certifications/ace-credit-for-certification-exams), чтобы узнать больше.
-subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: настройка рабочего пространства в Azure Machine Learning; проведение экспериментов и моделей обучения; оптимизация и управление моделями; и развертывание и использование модели.'
+  Кандидаты на сертификацию Azure Data Scientist Associate должны обладать знаниями по применению обработки и анализа данных и машинного обучения для реализации и выполнения рабочих нагрузок машинного обучения на Azure.
+
+  Обязанности этой роли включают планирование и создание подходящей рабочей среды для рабочих нагрузок для обработки и анализа данных на Azure. Вы выполняете эксперименты с данными и обучаете прогнозные модели. Кроме того, вы оптимизируете и развертываете модели машинного обучения в рабочей среде, а также осуществляете управление такими моделями.
+
+  Кандидат на эту сертификацию должен обладать знаниями и опытом работы в области обработки и анализа данных и использования Azure Machine Learning и Azure Databricks.
+subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие технические задачи: управлять ресурсами Azure для машинного обучения; выполнять эксперименты и обучать модели; развертывать решения машинного обучения и управлять их функциями; реализовывать ответственное машинное обучение.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUjA
 practiceTestUrl: https://www.mindhub.com/p/MU-DP-100?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
@@ -24,11 +26,11 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 20 мая 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
-- Настройка рабочего пространства в Azure Machine Learning (30-35%)
-- Проведение экспериментов и моделей обучения (25-30%)
-- Оптимизация и управление моделями (20-25%)
-- Развертывание и использование модели (20-25%)
+- Содержание этого экзамена было обновлено 20 мая 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
+- Управлять ресурсами Azure для машинного обучения (25-30%)
+- Проведение экспериментов и моделей обучения (20-25%)
+- Развертывать решения машинного обучения и управлять их функциями (35-40%)
+- Реализовывать ответственное машинное обучение (5-10%)
 roles:
 - data-scientist
 products:
@@ -38,10 +40,12 @@ products:
 - azure-machine-learning-studio
 courses:
 - uid: course.dp-100t01
+- uid: course.dp-090t00
 paths:
 - uid: learn.wwl.create-machine-learn-models
 - uid: learn.wwl.create-no-code-predictive-models-with-azure-machine-learning
 - uid: learn.data-ai.build-ai-solutions-with-azure-ml-service
+- uid: learn.wwl.perform-data-science-azure-databricks
 relatedCertifications:
 - related:
     uid: certification.azure-data-scientist
