--- a/learn-certs-pr/exams/sc-900.yml
+++ b/learn-certs-pr/exams/sc-900.yml
@@ -15,9 +15,22 @@ summary: |-
 subTitle: 'Этот экзамен измеряет вашу способность описывать следующее: понятия безопасности, соответствия требованиям и удостоверений; возможности решений Microsoft по управлению удостоверениями и доступом; возможности решений безопасности Microsoft; возможности решений Microsoft по обеспечению соответствия требованиям.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Mr81
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=SC-900&examname=Exam%20SC-900:%20Microsoft%20Security,%20Compliance,%20and%20Identity%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fsc-900
+providers:
+  - providerType: pearson-vue
+    examUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=SC-900&examname=Exam%20SC-900:%20Microsoft%20Security,%20Compliance,%20and%20Identity%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fsc-900
+  - providerType: certiport
+    examUrl: http://www.certiport.com/locator
 locales:
 - en
+- ja
+- zh-cn
+- ko
+- nl
+- fr
+- es
+- pt-br
+- ru
+- ar-sa
 levels:
 - beginner
 skills:
@@ -53,6 +66,8 @@ paths:
 - uid: learn.wwl.describe-capabilities-of-microsoft-identity-access-management-solutions
 - uid: learn.wwl.describe-capabilities-of-microsoft-security-solutions
 - uid: learn.wwl.describe-capabilities-of-microsoft-compliance-solutions
+courses:
+- uid: course.sc-900t00
 relatedCertifications:
 - related:
     uid: certification.security-compliance-and-identity-fundamentals
