--- a/learn-certs-pr/training-faq.yml
+++ b/learn-certs-pr/training-faq.yml
@@ -75,17 +75,17 @@ sections:
           
       - question: |
           Я регистрируюсь на курс и попадаю на сайт партнера по обучению, но в моей корзине ничего нет.
-          
+        answer: |
           Пожалуйста, свяжитесь с поставщиком услуг обучения, выбранным вами для курса, чтобы решить эту проблему. Контактную информацию партнера по обучению можно найти по адресу: [найти партнера по обучению Microsoft Learning в стране или регионе](/learn/certifications/partners#find-a-microsoft-learning-partner-by-country)
           
       - question: |
           Мне нужно отменить или перенести курс.
-          
+        answer: |
           Свяжитесь с партнером по обучению напрямую. Контактную информацию партнера по обучению можно найти по адресу: [найти партнера по обучению Microsoft Learning в стране или регионе](/learn/certifications/partners#find-a-microsoft-learning-partner-by-country)
           
       - question: |
           Цена, указанная на сайте Learn, не совпадает с ценой, указанной при оформлении заказа.
-          
+        answer: |
           В качестве цены всегда должны использоваться суммы, указанные на сайте или в корзине партнера по обучению, даже если в Learn указана другая сумма.
           
           Возможно, окончательная цена на сайте или в корзине партнера по обучению будет отличаться, так как в нее может быть уже включен налог, или налог необходимо рассчитать во время оформления заказа. Это может включать налог с продаж и налог на добавленную стоимость (VAT). Окончательная сумма, которую вы заплатите, также может зависеть от местонахождения покупателя или языка курса.
@@ -104,19 +104,19 @@ sections:
           
       - question: |
           Фильтрация по местоположению курса, дате и т. д. не работает должным образом.
-          
+        answer: |
           Если фильтрация не работает, обновите страницу в браузере и попробуйте еще раз. Если вы чувствуете, что фильтры по-прежнему не работают, вы можете задать свой вопрос в [Планирование курса под руководством инструктора Learning Partner на форуме поддержки Learn](https://trainingsupport.microsoft.com/en-us/iltvilt/forum). Это лучший ресурс для поиска и обращения за помощью, сообщения о проблеме и получения совета.
           
       - question: |
           Я не могу найти Learning Partner в моем районе.
-          
+        answer: |
           Если вы не видите Learning Partner или курс, который ищете, вы можете найти дополнительные дни и часы непосредственно на сайте Learning Partner помимо того, что отображается в Microsoft Learn.  Learning Partner не обязаны публиковать расписания для всех своих занятий. Вы можете найти список всех партнеров Microsoft Learning по адресу [найти партнера по обучению Microsoft Learning в стране или регионе](/learn/Certifications/partners#find-a-microsoft-learning-partner-by-country).
           
           Запуская эту новую услугу, мы ограничиваем количество квалифицированных Learning Partner. В течение следующего года будут добавлены Learning Partner, соответствующие определенным критериям.
           
       - question: |
           Я обратился через канал поддержки Learning Partner и не получил никакого ответа.
-          
+        answer: |
           Learning Partner несет ответственность за предоставление поддержки, связанной с планированием на своем сайте. Вы можете попробовать посмотреть другие числа на веб-сайте Learning Partner.
           
           Если вы по-прежнему не можете связаться с Learning Partner, вы можете разместить свой вопрос на странице [Планирование курса под руководством инструктора Learning Partner на форуме поддержки Learn](https://trainingsupport.microsoft.com/en-us/iltvilt/forum). Это лучший ресурс, где можно попросить о помощи, сообщить о проблеме и получить совет.
